[gd_scene load_steps=3 format=3 uid="uid://b5pv3tw05q5fg"]

[ext_resource type="Script" path="res://Game.gd" id="1_y7ro3"]
[ext_resource type="Texture2D" uid="uid://yh0xfjl855iq" path="res://assets/Seth Unedited.jpg" id="2_und8o"]

[node name="Game" type="Node3D"]
script = ExtResource("1_y7ro3")

[node name="Level" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/levels/test_map_1.tscn")
spawn_path = NodePath("../Level")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.231373, 0.262745, 1)

[node name="MainScreen" type="PanelContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 432.0
offset_top = 193.0
offset_right = -432.0
offset_bottom = -193.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MainScreen"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainScreen/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Username" type="LineEdit" parent="UI/MainScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Username"
alignment = 1

[node name="Host" type="Button" parent="UI/MainScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="Join" type="Button" parent="UI/MainScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Quit" type="Button" parent="UI/MainScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="WaitingRoom" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="UI/WaitingRoom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="UI/WaitingRoom/CenterContainer"]
layout_mode = 2
columns = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/WaitingRoom/CenterContainer/GridContainer"]
layout_mode = 2
alignment = 2

[node name="ReadyButton" type="Button" parent="UI/WaitingRoom/CenterContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "Ready"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/WaitingRoom/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="UI/WaitingRoom/CenterContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Waiting Room"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="UI/WaitingRoom/CenterContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/v_separation = 10
auto_height = true
item_count = 4
fixed_column_width = 200
icon_mode = 0
item_0/text = "Player 1"
item_1/text = "Player 2"
item_2/text = "Player 3"
item_3/text = "Player 4"

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(994, 484)
rotation = 0.704808
scale = Vector2(0.0390212, 0.0367063)
texture = ExtResource("2_und8o")

[connection signal="text_changed" from="UI/MainScreen/MarginContainer/VBoxContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="pressed" from="UI/MainScreen/MarginContainer/VBoxContainer/Host" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/MainScreen/MarginContainer/VBoxContainer/Join" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="UI/MainScreen/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/WaitingRoom/CenterContainer/GridContainer/VBoxContainer2/ReadyButton" to="." method="_on_ready_button_pressed"]
